WebCore: For continuous scrolling devices on the Mac (trackpads and Mighty/Magic Mice), set the number of wheel ticks equal to the atomic increment of the device: a pixel.  This ensures that any scrolling action will generate at least one wheel tick, regardless of the speed/length of the gesture.

Reviewed by John Sullivan.

https://bugs.webkit.org/show_bug.cgi?id=29601
<rdar://problem/7453254>

Tests: fast/events/continuous-platform-wheelevent-in-scrolling-div.html
       fast/events/platform-wheelevent-in-scrolling-div.html

* platform/mac/WebCoreSystemInterface.h: Modify method signature.
* platform/mac/WebCoreSystemInterface.mm: Ditto.
* platform/mac/WheelEventMac.mm:
(WebCore::PlatformWheelEvent::PlatformWheelEvent): Call into
WebKitSystemInterface to determine both wheelTicksX/Y and deltaX/Y.
WKSI will query the event system for number of wheel ticks and
pixels/lines scrolled based on the device type.

WebKit/mac: Updated call to WKGetWheelEventDeltas() to match new method signature.

Reviewed by John Sullivan.

https://bugs.webkit.org/show_bug.cgi?id=29601
<rdar://problem/7453254>

* WebView/WebDynamicScrollBarsView.mm:
(-[WebDynamicScrollBarsView scrollWheel:]):

WebKitLibraries: Added two new output arguments to WKGetWheelEventDeltas() to return
the number of scroll wheel ticks in the x and y directions.

Reviewed by John Sullivan.

https://bugs.webkit.org/show_bug.cgi?id=29601.
<rdar://problem/7453254>

* WebKitSystemInterface.h:
* libWebKitSystemInterfaceLeopard.a:
* libWebKitSystemInterfaceSnowLeopard.a:
* libWebKitSystemInterfaceTiger.a:

LayoutTests: These tests verify that scrollwheel events (both continuous and
non-continuous) generate the expected pixel deltas in scrollable
regions, and also generate DOM mousewheel events with expected
wheelDelta values.

Reviewed by John Sullivan.

https://bugs.webkit.org/show_bug.cgi?id=29601
<rdar://problem/7453254>

* fast/events/continuous-platform-wheelevent-in-scrolling-div-expected.txt: Added.
* fast/events/continuous-platform-wheelevent-in-scrolling-div.html: Added.
* fast/events/platform-wheelevent-in-scrolling-div-expected.txt: Added.
* fast/events/platform-wheelevent-in-scrolling-div.html: Added.
* fast/events/wheelevent-in-scrolling-div-expected.txt: Rebased
expected results due to change in test output formatting.
* fast/events/wheelevent-in-scrolling-div.html: Modified to use common
js logging and assertion functions.
* platform/gtk/Skipped: DRT support needed by tests not yet implemented
in GTK port.  See https://bugs.webkit.org/show_bug.cgi?id=36003.
* platform/mac-tiger/Skipped: DRT support needed by tests not possible
to implement in Tiger.
* platform/qt/Skipped: DRT support for tests not yet implemented in Qt
port.  See https://bugs.webkit.org/show_bug.cgi?id=36004.
* platform/win/Skipped: DRT support for tests not yet implemented in
Windows port.  See https://bugs.webkit.org/show_bug.cgi?id=36002.



Canonical link: https://commits.webkit.org/47307@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56012 268f45cc-cd09-0410-ab3c-d52691b4dbfc